# ax-studio

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  app-stability-cleanliness-test-report.html  ax-code.json  manager-quality-summary.html  package.json  sonar-project.properties  test-merge-playground.txt  vitest.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ax-fabric-linter-and-test.yml  ax-fabric-tauri-build.yaml  ax-studio-linter-and-test.yml  ax-studio-tauri-build.yaml  template-get-update-version.yml  template-tauri-build-linux-x64.yml  template-tauri-build-macos.yml  template-tauri-build-windows-x64.yml
.scannerwork/: report-task.txt
PRDS/: PRD-Rust-Tauri-Backend-Refactor.md  PRD-Source-Folder-Restructure.md
agent-teams/: Ask_the_Expert.json  Business_Case_Builder.json  Code_Generator.json  Document_Translator.json  Learning_Plan_Creator.json  Multi_Perspective_Analyzer.json
autoqa/: README.md  checklist.md  main.py  reportportal_handler.py  requirements.txt  screen_recorder.py  test_runner.py  utils.py
autoqa/scripts/: README.md  macos_cleanup.sh  macos_download.sh  macos_install.sh  macos_post_cleanup.sh  run_tests.ps1  run_tests.sh  setup-android-env.sh  ubuntu_cleanup.sh  ubuntu_download.sh  ubuntu_install.sh  ubuntu_post_cleanup.sh  windows_cleanup.ps1  windows_download.ps1  windows_install.ps1  windows_post_cleanup.ps1
core/: CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  vitest.config.ts
core/src/: index.test.ts  index.ts
docs/: ARTIFACTS_ENGINE_IMPLEMENTATION.md  ARTIFACTS_ENGINE_STATUS.md  AX-Studio-Stability-Report-2026-05-06.html  AX-Studio-Stability-Report-2026-05-07.html  AX_STUDIO_FEATURE_INVENTORY.xlsx  Agent_Architecture_Proposal.csv  CONVENTIONS.md  DEEP_RESEARCH_ENGINE.md  IMPL-Multi-Agent-Framework.md  Integrations.md  PRD-Multi-Agent-Framework.md  automatosx-studio-stack.mmd  ax-studio-runtime.mmd  bugs.md  bugs_fixed.md  gap-analysis-report.md  release-checklist.md  security-remediation-prd.txt
docs/drafts/: ADR-004-desktop-framework-choice.md  ADR-005-mcp-as-tool-integration-layer.md  ADR-006-local-first-data-storage.md  ADR-007-multi-agent-orchestration-design.md  ADR-008-extension-system-design.md  PRD-AX-Studio-Master.md  README.md  REFACTORING-PHASE-2-INVENTORY.md
extensions/: CONTRIBUTING.md
extensions/assistant-extension/: README.md  package.json  tsconfig.json  vitest.config.ts
extensions/conversational-extension/: package.json  tsconfig.json
extensions/download-extension/: package.json  tsconfig.json  vitest.config.ts
extensions/llamacpp-extension/: package.json  rolldown.config.mjs  settings.json  tsconfig.json  (+1 more)
flatpak/: ai.axfabric.AxFabric.metainfo.xml  ai.axfabric.AxFabric.yml  ai.axstudio.AxStudio.metainfo.xml  ai.axstudio.AxStudio.yml
scripts/: download-bin.mjs  find-missing-i18n-key.js  find-missing-translations.js  tauri-build.mjs
src-tauri/: CONTRIBUTING.md  Cargo.toml  Info.plist  build.rs  latest.json.template  tauri.android.conf.json  tauri.bundle.windows.nsis.template  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/build-utils/: buildAppImage.sh
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/plugins/: CONTRIBUTING.md
src-tauri/plugins/tauri-plugin-hardware/: Cargo.toml  package.json
src-tauri/plugins/tauri-plugin-hardware/src/: commands.rs  tests.rs
src-tauri/plugins/tauri-plugin-llamacpp/: Cargo.toml  NOTICE  build.rs  package.json
src-tauri/plugins/tauri-plugin-llamacpp/guest-js/: index.ts  types.ts
src-tauri/plugins/tauri-plugin-llamacpp/permissions/: default.toml
src-tauri/plugins/tauri-plugin-llamacpp/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-llamacpp/permissions/autogenerated/commands/: start_ax_serving.toml
src-tauri/plugins/tauri-plugin-llamacpp/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-llamacpp/src/: args.rs  backend.rs  cleanup.rs  commands.rs  device.rs  lib.rs  path.rs  process.rs  state.rs
src-tauri/plugins/tauri-plugin-llamacpp/src/gguf/: commands.rs
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: agent_run_logs.rs  agent_teams.rs  automatosx.rs  error.rs  mod.rs  setup.rs  state.rs
src-tauri/src/core/agent_run_logs/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/core/agent_teams/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/core/app/: commands.rs  helpers.rs  models.rs
src-tauri/src/core/code_execution/: commands.rs  mod.rs  sandbox.rs
src-tauri/src/core/downloads/: commands.rs  helpers.rs  models.rs  tests.rs
src-tauri/src/core/extensions/: commands.rs
src-tauri/src/core/filesystem/: akidb.rs  commands.rs  helpers.rs  mod.rs  models.rs  service.rs  tests.rs
src-tauri/src/core/integrations/: commands.rs  constants.rs  mod.rs  oauth.rs  secure_store.rs
src-tauri/src/core/mcp/: commands.rs  constants.rs  helpers.rs  lockfile.rs  mod.rs  models.rs  shutdown.rs  tests.rs
src-tauri/src/core/mlx/: commands.rs  mod.rs  state.rs  worker.rs
src-tauri/src/core/research/: commands.rs  mod.rs  scraper.rs
src-tauri/src/core/server/: commands.rs  cors.rs  gateway_routes.rs  mod.rs  model_routes.rs  provider_adapter.rs  proxy.rs  proxy_server.rs  remote_provider_commands.rs  security.rs  service_routing.rs  tests.rs
src-tauri/src/core/setup/: extensions.rs  lifecycle.rs  mcp_bootstrap.rs  mod.rs  store_migration.rs  tray.rs
src-tauri/src/core/system/: commands.rs
src-tauri/src/core/threads/: commands.rs  db.rs  helpers.rs  mod.rs  models.rs  tests.rs  utils.rs
src-tauri/src/core/updater/: commands.rs  custom_updater.rs  hmac_client.rs  mod.rs  session.rs
src-tauri/static/: openapi.json
src-tauri/utils/: Cargo.toml
src-tauri/utils/src/: crypto.rs  http.rs  lib.rs  network.rs  path.rs  system.rs
tests/: checklist.md
web-app/: CONTRIBUTING.md  README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+1285 files in other folders)
