[package]
name = "ax-studio"
version = "1.3.2"
description = "Ax-Studio — AI desktop application powered by your own backend services."
authors = ["Ax-Studio"]
license = "Apache-2.0"
homepage = "https://github.com/defai-digital/ax-studio"
repository = "https://github.com/defai-digital/ax-studio"
edition = "2021"
rust-version = "1.77.2"
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
sysinfo = "0.34.2"
libc = "0.2"
nix = { version = "=0.30.1", features = ["signal", "process"] }
ax-studio-utils = { path = "./utils", package = "ax-studio-utils" }
tauri = { version = "2.5.0", default-features = false }
tauri-plugin-hardware = { path = "./plugins/tauri-plugin-hardware" }
tauri-plugin-llamacpp = { path = "./plugins/tauri-plugin-llamacpp" }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = [
    "tauri/wry",
    "tauri/common-controls-v6",
    "tauri/protocol-asset",
    "tauri/tray-icon",
    "tauri/test",
    "tauri/custom-protocol",
    "desktop",
]
hardware = ["dep:tauri-plugin-hardware"]
deep-link = ["dep:tauri-plugin-deep-link"]
llamacpp = ["dep:tauri-plugin-llamacpp"]
desktop = [
    "deep-link",
    "hardware",
    "llamacpp",
]
test-tauri = [
    "tauri/wry",
    "tauri/protocol-asset",
    "tauri/tray-icon",
    "tauri/test",
    "desktop",
]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
sha2 = "0.10"

[dependencies]
dirs = "6.0.0"
reqwest = { workspace = true, features = ["native-tls-vendored"] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
flate2 = "1.0"
futures-util = "0.3.31"
hex = "0.4"
hmac = { workspace = true }
hyper = { version = "0.14", features = ["server"] }
ax-studio-utils = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rmcp = { version = "0.8.5", features = [
    "client",
    "transport-sse-client",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "reqwest",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sha2 = { workspace = true }
tar = "0.4"
zip = "2"
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-hardware = { workspace = true, optional = true }
tauri-plugin-llamacpp = { workspace = true, optional = true }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2.2.7"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = "2"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.14"
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
rfd = { version = "0.15.4", default-features = false, features = [
  "tokio",
  "common-controls-v6",
] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
glob = "0.3"
scraper = "0.20"
subtle = "2.6"
regex = "1"
base64 = "0.22"
semver = "1"

[dependencies.tauri]
workspace = true
features = ["protocol-asset", "test"]

[target.'cfg(windows)'.dev-dependencies]
tempfile = "3.20.0"


[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
libc = { workspace = true }
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

# ── In-process AX Engine SDK (macOS-only native MLX runtime) ─────────────────
# Linking ax-engine-sdk with the `mlx-native` feature pulls in ax-engine-mlx
# and mlx-sys, which require Apple's MLX C++ library and the Metal toolchain.
# Currently a path dep on the developer's local ax-engine checkout; switch to
# a git rev for CI/builds on other machines.
[target.'cfg(target_os = "macos")'.dependencies]
ax-engine-sdk = { path = "/Users/devop/code/ax-engine/crates/ax-engine-sdk", features = ["mlx-native", "tokenizer"] }
# Direct `tokenizers` dep so we can decode generated token ids back to text —
# EngineTokenizer (from ax-engine-sdk) only exposes `encode`. The SDK already
# pulls this in transitively with matching features; declared here so we can
# call it without going through the SDK wrapper.
tokenizers = { version = "0.20", default-features = false, features = ["onig", "esaxx_fast"] }

# Release profile optimizations for minimal binary size
[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Aggressive Link Time Optimization
strip = "symbols"   # Strip debug symbols for smaller binary
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = "abort"     # Don't unwind on panic, saves space
overflow-checks = false  # Disable overflow checks for size
debug = false       # No debug info
debug-assertions = false  # No debug assertions
incremental = false # Disable incremental compilation for release
rpath = false       # Don't include rpath
