[package]
name = "ax-studio-utils"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://github.com/defai-digital/ax-studio"
repository = "https://github.com/defai-digital/ax-studio"
edition = "2021"

[dependencies]
base64 = "0.22"
hmac = { workspace = true }
log = { version = "0.4", optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { version = "1", features = ["process", "fs", "macros", "rt"] }
tokio-util = "0.7.14"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
logging = ["log"]
