[package]
name = "tauri-plugin-hardware"
version = "0.6.599"
authors = ["Ax-Studio"]
description = "Tauri plugin for hardware information and GPU monitoring"
license = "Apache-2.0"
homepage = "https://github.com/defai-digital/ax-studio"
repository = "https://github.com/defai-digital/ax-studio"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-hardware"

[dependencies]
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.34.2"
tauri = { version = "2.5.0", default-features = false, features = ["test"] }
tokio = { version = "1", features = ["time"] }

[dependencies.vulkano]
version = "0.34"

[dependencies.ash]
version = "0.37"

[dependencies.nvml-wrapper]
version = "0.10.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
