[package]
name = "tauri-plugin-hardware"
version = "0.6.599"
authors = ["Ax-Studio"]
description = "Tauri plugin for hardware information and GPU monitoring"
license = "Apache-2.0"
homepage = "https://github.com/defai-digital/ax-studio"
repository = "https://github.com/defai-digital/ax-studio"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-hardware"

[dependencies]
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true, features = ["test"] }
tokio = { version = "1", features = ["time"] }

[dependencies.vulkano]
version = "0.34"

[dependencies.nvml-wrapper]
version = "0.10.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }

[dev-dependencies]
serde_json = { workspace = true }
