[package]
name = "tauri-plugin-llamacpp"
version = "0.6.599"
authors = ["Ax-Studio <service@axstudio.ai>"]
description = "Tauri plugin for managing Ax-Studio LlamaCpp server processes and model loading"
license = "Apache-2.0"
homepage = "https://github.com/defai-digital/ax-studio"
repository = "https://github.com/defai-digital/ax-studio"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-llamacpp"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
hmac = { workspace = true }
ax-studio-utils = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tauri-plugin-hardware = { workspace = true }

reqwest = { workspace = true, features = ["native-tls"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
